--- a/firebase.json
+++ b/firebase.json
@@ -6,7 +6,8 @@
       "**/.*",
       "**/node_modules/**",
       "SETUP.md",
-      "firestore.rules"
+      "firestore.rules",
+      "functions/**"
     ],
     "headers": [
       {
@@ -22,5 +23,8 @@
   },
   "firestore": {
     "rules": "firestore.rules"
+  },
+  "functions": {
+    "source": "functions"
   }
 }
